--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <!--suppress MavenModelInspection -->
+                <version>3.3.0-SNAPSHOT</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <minimizeJar>true</minimizeJar>
@@ -138,6 +139,14 @@
                         </relocation>
                     </relocations>
                     <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/SPONGEPO.SF</exclude>
+                                <exclude>META-INF/SPONGEPO.DSA</exclude>
+                                <exclude>META-INF/SPONGEPO.RSA</exclude>
+                            </excludes>
+                        </filter>
                         <filter>
                             <artifact>mysql:mysql-connector-java</artifact>
                             <includes>
@@ -263,6 +272,13 @@
         </repository>
     </repositories>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <dependencies>
         <!-- Spigot API -->
         <dependency>
@@ -370,7 +386,7 @@
             <artifactId>acf-bungee</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
-        <!-- ACF for skinsrestorer.sponge -->
+        <!-- ACF for sponge -->
         <dependency>
             <groupId>co.aikar</groupId>
             <artifactId>acf-sponge</artifactId>
@@ -438,6 +454,12 @@
             <groupId>com.gilecode.yagson</groupId>
             <artifactId>j9-reflection-utils</artifactId>
             <version>[1.0,)</version>
+        </dependency>
+        <!-- Configuration library -->
+        <dependency>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>configurate-yaml</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
 </project>
