--- a/src/main/resources/command-messages.properties
+++ b/src/main/resources/command-messages.properties
@@ -1,6 +1,6 @@
 ##############################
 #  SkinsRestorer help msg    #
-#  Generated on 13.6         #
+#  Generated on ${project.version}         #
 ##############################
 #
 # We from SRTeam thank you for using our plugin!
