--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,19 @@ target/*
 .project
 .factorypath
 
+# UML
 *.plantuml 
+
+# Gradle
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
