--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,28 +10,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '16'
           distribution: 'adopt'
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
+      - uses: actions/cache@v2
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ runner.os }}-gradle-
       - name: Build website with Maven
-        run: mvn -B site --file pom.xml
-      - name: Move files
-        run: |
-          rm -rf docs/
-          mkdir docs
-          mv ./target/site/* ./docs
-      - name: Generate version file
-        run: |
-          mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec > ./docs/VERSION.txt
+        run: ./gradlew site
       - name: Commit files
         run: |
           git add .
