Add myself to plugin.yml and add language completion for mysql class

--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: net.skinsrestorer.bungee.SkinsRestorer
 version: ${version}
-author: Th3Tr0LLeR, McLive, DoNotSpamPls, knat
+author: Th3Tr0LLeR, McLive, DoNotSpamPls, knat, AlexProgrammerDE
