Make protocollib listener a opt in

--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -166,6 +166,11 @@ DisableOnJoinSkins: false
 # Enable this will require players to run "/skin update" to update their skin.
 DisallowAutoUpdateSkin: false
 
+# <!! Warning Experimental !!>
+# This enables the experimental ProtocolLib integration that allows instant skins on join.
+# Use with caution! This may decrease your TPS.
+EnableProtocolListener: false
+
 # Updater Settings
 Updater:
 # # <!! Warning !!>
@@ -200,6 +205,6 @@ Debug: false
 # Website: https://skinsrestorer.net/
 # Download: https://github.com/SkinsRestorer/SkinsRestorerX/releases
 # Wiki https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
-# spigot: https://www.spigotmc.org/resources/skinsrestorer.2124/
-# github: https://github.com/SkinsRestorer/SkinsRestorerX/
-# discord: https://discord.me/SkinsRestorer/
+# Spigot: https://www.spigotmc.org/resources/skinsrestorer.2124/
+# Github: https://github.com/SkinsRestorer/SkinsRestorerX/
+# Discord: https://discord.me/SkinsRestorer/
