--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
   - source: /src/main/resources/languages/english.yml
-    translation: /src/main/resources/languages/%locale%.yml
+    translation: /src/main/resources/languages/locale/messages-%locale%.yml
   - source: /src/main/resources/command-messages.properties
-    translation: /src/main/resources/command-messages-%locale%.properties
+    translation: /src/main/resources/translations/acf/%original_file_name%-%locale%.properties
