--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: ./gradlew javadoc
       - name: Move files
         run: |
-          mv ./build/docs/javadoc ./docs
+          mv ./api/build/docs/javadoc ./docs
       - name: Create CNAME
         run: |
           echo "docs.skinsrestorer.net" > ./docs/CNAME
