--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -114,6 +114,9 @@ MySQL:
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin.
 NoSkinIfLoginCanceled: true
 
+# This will make SkinsRestorer always apply the skin even if the player joins as premium on a online mode server.
+AlwaysApplyPremium: false
+
 # When enabled, Only websites from the list below is allowed to be set using /skin url <url>
 RestrictSkinUrls:
   Enabled: false
