--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -100,6 +100,7 @@ MySQL:
   Database: db
   Username: root
   Password: pass
+  MaxPoolSize: 10
   SkinTable: 'Skins'
   PlayerTable: 'Players'
   ConnectionOptions: verifyServerCertificate=false&useSSL=false&serverTimezone=UTC
