--- a/src/main/resources/command-messages-uk-UA.properties
+++ b/src/main/resources/command-messages-uk-UA.properties
@@ -1,34 +1,96 @@
-##############################
-#  SkinsRestorer help msg    #
-#  Generated on ${version}         #
-##############################
-#
-# We from SRTeam thank you for using our plugin!
-#
-# For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
-# For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
-acf-core.permission_denied = &3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not have permission to perform this command.
-acf-core.error_generic_logged = &e[&2SkinsRestorer&e] &4An error occurred. This problem has been logged. Sorry for the inconvenience.
-acf-core.unknown_command = Unknown Command, please type <c2>/skin</c2>
-acf-core.invalid_syntax = Usage: <c2>{command}</c2> <c3>{syntax}</c3>
-acf-core.error_prefix = Error: {message}
-acf-core.error_performing_command = I'm sorry, but there was an error performing this command.
-acf-core.info_message = {message}
-acf-core.please_specify_one_of = &e[&2SkinsRestorer&e] &4Error&8: &cPlease specify one of (<c2>{valid}</c2>).
-acf-core.not_allowed_on_console = [SkinsRestorer] Error: Console may not execute this command.
-acf-core.could_not_find_player = &e[&2SkinsRestorer&e] &4Error&8: &cCould not find a player by the name&4: <c2>{search}</c2>
-acf-core.no_command_matched_search = &e[&2SkinsRestorer&e] &4Error&8: &cno such command&4: <c2>{search}</c2>.
-acf-core.help_page_information = - Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
-acf-core.help_no_results = &e[&2SkinsRestorer&e] &4Error&8: &cNo more results&4.
-acf-core.help_header = &3[&2&lSkinsRestorer&r&3] &7- &bShowing help for &a{commandprefix}{command}&7.
-acf-core.help_format = &2  &2{command}&a{parameters} &7{separator}&7 &f{description}
-acf-core.help_detailed_header = &3[&2&lSkinsRestorer&r&3] &7- <c1>Showing info for </c1><c2>{commandprefix}{command}</c2>
-acf-core.help_detailed_command_format = <c1>{command}</c1><c2>{parameters}</c2> <c3>{separator} {description}</c3>
-acf-core.help_detailed_parameter_format = <c2>{name}</c2>: <c3>{description}</c3>
-acf-core.help_search_header = &3[&2&lSkinsRestorer&r&3] &7- &bCommands matching <c2>{commandprefix}{command} {search}</c2>
-acf-minecraft.username_too_short = Error: Username too short, must be at least three characters.
-acf-minecraft.is_not_a_valid_name = Error: <c2>{name}</c2> is not a valid username.
-acf-minecraft.multiple_players_match = &e[&2SkinsRestorer&e] &4Error&8: &cMultiple players matched <c2>{search}</c2> <c3>({all})</c3>&c, please be more specific.
-acf-minecraft.no_player_found_server = &e[&2SkinsRestorer&e] &4Error&8: &cNo player matching <c2>{search}</c2> is connected to this server.
-acf-minecraft.no_player_found_offline = &e[&2SkinsRestorer&e] &4Error&8: &cNo player matching <c2>{search}</c2> could be found.
-acf-minecraft.no_player_found = &e[&2SkinsRestorer&e] &4Error&8: &cNo player matching <c2>{search}</c2> could be found.
+---
+#String used as a divider
+line: "\"&7&m----------------------------------------\";"
+#String sent to player when they do not have permission to use a command
+playerNoPermission:
+  #String sent to player when they do not have permission to use a command
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cУ вас немає дозволу на це.";'
+#Message line sent when requesting SkinsRestorer help without skinsrestorer.cmds permission
+helpPlayer:
+  - "    &2&lSkinsRestorer &7- &f&lv%ver%"
+  - "    &2/skin set <назва_скіна> &7-&f змінює ваш скін."
+  - "    &2/skin <назва_скіна> &7-&f скорочена версія \"/skin set\"."
+  - '"    &2/skin clear &7-&f скидає ваш скін.";'
+#Message line sent when requesting SkinsRestorer help and having skinsrestorer.cmds permission
+help: "\"    &2/sr &7- &fвідображення команд адміністратора.\";"
+#Message sent when the premium account with specified username does not exist
+notPremium:
+  #Message sent when the premium account with specified username does not exist
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cПреміум-гравця з таким ім’ям не існує.";'
+#Message sent to player whose skin was changed
+skinChangeSuccess: "\"&e[&2SkinsRestorer&e] &2Ваш скін змінено.\";"
+#Message sent to player whose skin was cleared
+skinClearSuccess: "\"&e[&2SkinsRestorer&e] &2Ваш скін скинуто.\";"
+#Message sent to player that used /sr clear PLAYER command
+skinClearIssuer: "\"&e[&2SkinsRestorer&e] &2Скін гравця скинуто %player.\";"
+#Message sent when requesting admin help
+help_admin:
+  - "&2&lSkinsRestorer &7- &f&lv%ver% &c&lAdmin"
+  - "    &2/sr config &7- &fсторінка допомоги для корисних налаштувань конфігурації у грі"
+  - "    &2/sr set <гравець> <назва_скіна> &7- &fзмінює скін гравця."
+  - "    &2/sr drop <гравець> &7- &fскидає дані скінів гравців."
+  - "    &2/sr clear <гравець> &7- &fочищення даних гравця."
+  - "    &2/sr reload &7- &fперезавантажує конфігурацію та локалізацію"
+  - '"    &2/sr props [гравець] &7- &fвідображає фактичний скін гравця як властивості";'
+#Message displayed when using /sr set command
+adminSetSkin: "\"&e[&2SkinsRestorer&e] &2Ви поставили скін %player.\";"
+#Message displayed when using /sr set command and providing an invalid username
+invalidPlayer:
+  #Message displayed when using /sr set command and providing an invalid username
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&c%player не є дійсним ім’ям користувача.";'
+#Message displayed when using /sr set command and providing username of a player that is currently not online
+playerNotonline:
+  #Message displayed when using /sr set command and providing username of a player that is currently not online
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cГравець не знаходиться у мережі!";'
+#Message displayed when using /sr drop command
+skinDataDropped: "\"&e[&2SkinsRestorer&e] &2Дані скіна для гравця %player скинуті.\";"
+#Message sent when the /sr reload command execution was successful
+reload: "\"&e[&2SkinsRestorer&e] &2Конфігурація та локалізація були перезавантажені!\";"
+#Message sent to player that is on cooldown when using /skin command too fast without having the skinsrestorer.bypasscooldown permission
+skinCooldownNew:
+  #Message sent to player that is on cooldown when using /skin command too fast without having the skinsrestorer.bypasscooldown permission
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cВи можете знову змінити шкіру через &e%s &cсекунд.";'
+#Message sent when a player wants to use a disabled skin without having the skinsrestorer.bypassdisabled permission
+skinDisabled:
+  #Message sent when a player wants to use a disabled skin without having the skinsrestorer.bypassdisabled permission
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cЦей скін вимкнено адміністратором.";'
+#Unknown
+noSkinData:
+  #Unknown
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cІнформація про скін не отримана! Чи є у цього гравця скін?";'
+#When proxy returned skin is empty
+genericError:
+  #When proxy returned skin is empty
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cПри запиті даних про скін сталася помилка, будь ласка, спробуйте ще раз!";'
+#Cooldown message
+waitMinute:
+  #Cooldown message
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cЗачекайте хвилину, перш ніж знову запитувати цей скін (швидкість обмежена).";'
+#Message sent when server has an outdated version of SR
+outdated:
+  #Message sent when server has an outdated version of SR
+  "\"&e[&2SkinsRestorer&e] &4Ви використовуєте застарілу версію SkinsRestorer!\n&cБудь ласка, оновіть до останньої версії": \n&e-> https://skinsrestorer.net/get/latest";
+#Message sent when using a player-only command
+playersOnly: "\"&4Ці команди призначені лише для гравців!\";"
+#When none Player try's to set a skin
+notPlayer:
+  #When none Player try's to set a skin
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cВам потрібно бути гравцем!";'
+#=== GUI ===
+#/skins message
+menuOpen: "\"&2Відкриття меню скінів...\";"
+#Next page [GUI]
+nextPage: "\"&a&l»&7 Наступна сторінка&a&l »\";"
+#Previus page [GUI]
+previusPage: "\"&e&l»&7 Попередня сторінка&e&l «\";"
+#Clear skin [GUI]
+removeSkin: "\"&c&l»&7 Вилучитискін&c&l »\";"
+#item lore for skulls [GUI]
+selectSkin: "\"&2Натисніть, щоб вибрати цей скін\";"
+#=== DEBUG ===
+#old debug
+statusOk: "\"&e[&2SkinsRestorer&e] &2Успішне підключення до API Mojang!\";"
+#old debug
+altApiFailed:
+  #old debug
+  "\"&e[&2SkinsRestorer&e] &4Помилка&8": '&cAPI даних скінів перевантажений, повторіть спробу пізніше!";'
