Add few extra gradle flags to improve speeds

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.cache=true
+org.gradle.caching=true
