--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -57,15 +57,15 @@ DefaultSkins:
   ApplyForPremium: false
   Names:
     - "xknat"
-    - "McLive"
+    - "Pistonmaster"
 
 # Skins in this list will be disabled, so users can't set them.
 # Can be bypassed with 'skinsrestorer.bypassdisabled'.
 DisabledSkins:
   Enabled: false
   Names:
-    - "Steve"
-    - "Owner"
+    - "steve"
+    - "owner"
 
 # Custom list for the /skins GUI.
 # ShowOnlyCustomGUI will only show CustomGUI.Names in the gui.
@@ -74,7 +74,7 @@ CustomGUI:
   ShowOnlyCustomGUI: true
   Names:
     - "xknat"
-    - "McLive"
+    - "Pistonmaster"
 
 ############
 # Advanced #
@@ -83,7 +83,7 @@ CustomGUI:
 # Below Config options are OPTIONAL and are irrelevant for small servers.
 
 # Allows the usage of per-skin permission.
-# Example: skinsrestorer.skin.xknat OR skinsrestorer.skin.McLive
+# Example: skinsrestorer.skin.xknat OR skinsrestorer.skin.Pistonmaster
 # with "skinsrestorer.ownskin" you can set your own playername skin.
 PerSkinPermissions: false
 
