Make ifnoserverblockcommand off by default

--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -72,8 +72,8 @@ NotAllowedCommandServers:
   Enabled: true
   # Whether ONLY servers from the list below are allowed to use SkinsRestorer commands.
   AllowList: false
-  # Block players from executing SkinsRestorer commands before having joined a server.
-  IfNoServerBlockCommand: true
+  # Block players from executing SkinsRestorer commands before having joined a server. (RECOMMENDED)
+  IfNoServerBlockCommand: false
   List:
     - "auth"
 
