Fix skin on resourcepack (#916)
* Fixed skin application with server resource packs

Fixes GH-582

* return early if ResourcePack has not been loaded

* move from danger zone to Compatibility

* We don't need to get new default skin when skin is already been set on join

* switch statement because of config change

* srlogger...

* first proof of concept

* fix year so it does build

* Align with PlayerJoin.java

* reuse code

* cleanup merge

* fix rename skinstorage

* Fixup resource pack event

* Register resource pack event

Co-authored-by: OLEGSHA <kvadropups@gmail.com>
Co-authored-by: Alex <40795980+AlexProgrammerDE@users.noreply.github.com>

--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -145,6 +145,10 @@ MineskinAPIKey: "key"
 
 # If we break things, you can disable it here.
 
+# Disabling this will stop SkinsRestorer from changing skins when a player loads a server resource pack.
+# When a player loads a server resource pack, their skin is reset. By default, SkinsRestorer reapplies the skin when the player reports that the resource pack has been loaded or an error has occurred.
+ResourcePackFix: true
+
 # Dismounts a mounted (on a horse, or sitting) player when their skin is updated, preventing players from becoming desynced.
 # File override = ./plugins/SkinsRestorer/disableDismountPlayer.txt
 DismountPlayerOnSkinUpdate: true
