Cleanup MojangAPI to return status code and also add proper dependency on some plugins on bukkit

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ version: ${version}
 description: ${description}
 website: https://skinsrestorer.net/
 authors: [ "knat", "AlexProgrammerDE", "Th3Tr0LLeR", "McLive", "DoNotSpamPls"]
-softdepend: [ "ViaBackwards", "ProtocolLib" ]
+softdepend: [ "ProtocolLib", "ViaVersion", "ViaBackwards", "ProtocolSupport", "MundoSK" ]
 api-version: 1.13
 commands:
   skin:
