--- a/shared/src/main/resources/command.properties
+++ b/shared/src/main/resources/command.properties
@@ -1,12 +1,12 @@
-##############################
-#  SkinsRestorer help msg    #
-#  Generated on ${version}       #
-##############################
+##################################
+#  SkinsRestorer command messages
+#  Generated on ${version}
+##################################
 #
 # We from SRTeam thank you for using our plugin!
 #
 # For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
-# For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
+# For Advanced help or other go to our Discord: https://skinsrestorer.net/discord
 acf-core.permission_denied=&3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not have permission to perform this command.
 acf-core.error_generic_logged=&e[&2SkinsRestorer&e] &4An error occurred. This problem has been logged. Sorry for the inconvenience.
 acf-core.unknown_command=Unknown Command, please type <c2>/skin</c2>
