Do not escape special characters in translations

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,4 @@
 files:
   - source: /shared/src/main/resources/languages/language.properties
     translation: /shared/src/main/resources/languages/language_%osx_locale%.properties
+    escape_special_characters: 0
