--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -9,11 +9,11 @@ api-version: 1.13
 commands:
   skin:
     description: Main command.
+  skins:
+    description: Opens skins GUI.
   sr:
     aliases: [ skinsrestorer ]
     description: Admin commands.
-  skins:
-    description: Opens skins GUI
 permissions:
   skinsrestorer.command:
     description: Allows access to the main "/skin" commands.
@@ -32,6 +32,10 @@ permissions:
     default: op
   skinsrestorer.command.search:
     description: Allows access to search your skin.
+    default: op
+
+  skinsrestorer.command.gui:
+    description: Allows access to open skins GUI.
     default: op
 
   skinsrestorer.admincommand:
@@ -68,3 +72,31 @@ permissions:
   skinsrestorer.bypassdisabled:
     description: Allows access to disabled skins in the config.
     default: op
+
+  # wildcards
+  skinsrestorer.command.*:
+    description: Wildcard permission for players
+    children:
+      skinsrestorer.command: true
+      skinsrestorer.command.set: true
+      skinsrestorer.command.set.url: true
+      skinsrestorer.command.clear: true
+      skinsrestorer.command.update: true
+      skinsrestorer.command.search: true
+      skinsrestorer.command.gui: true
+
+  skinsrestorer.admincommand.*:
+    description: Wildcard permission for admins
+    children:
+      skinsrestorer.command.*: true
+      skinsrestorer.admincommand: true
+      skinsrestorer.command.set.other: true
+      skinsrestorer.command.clear.other: true
+      skinsrestorer.command.update.other: true
+      skinsrestorer.admincommand.status: true
+      skinsrestorer.admincommand.drop: true
+      skinsrestorer.admincommand.props: true
+      skinsrestorer.admincommand.applyskin: true
+      skinsrestorer.admincommand.createcustom: true
+      skinsrestorer.bypasscooldown: true
+      skinsrestorer.bypassdisabled: true
