Implement platform independent plugin classes!
Easy management and access of plugin logic.

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: SkinsRestorer
-main: net.skinsrestorer.bukkit.SkinsRestorer
+main: net.skinsrestorer.bukkit.SkinsRestorerBootstrap
 version: ${version}
 description: ${description}
 website: https://skinsrestorer.net/
