Move reflection package to shared and do some small changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,11 @@
 # Gradle properties
+org.gradle.jvmargs=-Xmx2G -Xms256m -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
 org.gradle.daemon=true
+
 org.gradle.configureondemand=true
-org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.cache=true
 org.gradle.caching=true
+org.gradle.parallel=true
+
+org.gradle.vfs.watch=true
