--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: SkinsRestorer Discord
-    url: skinsrestorer.net/discord
+    url: https://skinsrestorer.net/discord
     about: For support & help
