--- a/shared/src/main/resources/config.yml
+++ b/shared/src/main/resources/config.yml
@@ -117,7 +117,8 @@ SkinExpiresAfter: 15
 # [!] Non-root users: MySQL 8's new default authentication is not supported, use mysql_native_password [!]
 # [!] Make sure you have the correct permissions set for your MySQL user. [!]
 # [!] Make sure to fill in MySQL.ConnectionOptions if you're using certificate / ssl authentication. [!]
-# [!] If you're not using ssl, chane sslMode=trust to sslMode=disable [!]
+# [!] If you're not using ssl, change sslMode=trust to sslMode=disable [!]
+
 MySQL:
   Enabled: false
   Host: localhost
