--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -3,6 +3,9 @@ on: [push, pull_request]
 
 jobs:
   validation:
+    # Only run on PRs if the source branch is on someone else's repo
+    if: "${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}"
+
     name: "Validation"
     runs-on: ubuntu-latest
     steps:
